--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,11 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
 }
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    font-family: arial;
+  }
