--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,13 @@ html {
     text-align: center;
     font-family: arial;
   }
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.aboutus {
+    display: flex;
+    flex-wrap: wrap;
+}
